--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,15 @@ jobs:
   test-python-versions:
     name: Check Python ${{ matrix.python-version }} on Ubuntu
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.allow_failure }}
     strategy:
+      fail-fast: false 
       matrix:
-        python-version: ["3.8","3.10", "3.11"]
+        python-version: ["3.10", "3.11"]
+        allow_failure: [false]
+        include:
+          - python-version: "3.12.0-beta.4"
+            allow_failure: true
     steps:
       - uses: actions/checkout@v3
 
@@ -15,39 +21,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Install package
-        run: python -m pip install -e .[test]
-
-      - name: Test package
-        run: python -m pytest
-
-
-  test-python-3-10:
-    name: Check Python 3.10 on Ubuntu
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Install package
-        run: python -m pip install -e .[test]
-
-      - name: Test package
-        run: python -m pytest
-
-  test-python-3-11:
-    name: Check Python 3.11 on Ubuntu
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
 
       - name: Install package
         run: python -m pip install -e .[test]
